==> josarcas/GUI-ESP32/main/lcd_driver.c <==
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "freertos/semphr.h"
#include "driver/gpio.h"
#include "lcd_driver.h"

void lcd_init()
{
	gpio_set_direction(DC_PIN, GPIO_MODE_OUTPUT);
	gpio_set_direction(RST_PIN, GPIO_MODE_OUTPUT);

	lcd_reset();
	lcd_mutex = xSemaphoreCreateMutex();

	if(xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE)
	{
	    lcd_write_reg(0XF9);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x08);

	    lcd_write_reg(0xC0);
	    lcd_write_data_byte(0x19);
	    lcd_write_data_byte(0x1a);

	    lcd_write_reg(0xC1);
	    lcd_write_data_byte(0x45);
	    lcd_write_data_byte(0x00);

	    lcd_write_reg(0xC2);
	    lcd_write_data_byte(0x33);

	    lcd_write_reg(0XC5);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x28);

	    lcd_write_reg(0xB1);
	    lcd_write_data_byte(0xA0);
	    lcd_write_data_byte(0x11);

	    lcd_write_reg(0xB4);
	    lcd_write_data_byte(0x02);

	    lcd_write_reg(0xB6);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x42);
	    lcd_write_data_byte(0x3B);

	    lcd_write_reg(0xB7);
	    lcd_write_data_byte(0x07);

	    lcd_write_reg(0xE0);
	    lcd_write_data_byte(0x1F);
	    lcd_write_data_byte(0x25);
	    lcd_write_data_byte(0x22);
	    lcd_write_data_byte(0x0B);
	    lcd_write_data_byte(0x06);
	    lcd_write_data_byte(0x0A);
	    lcd_write_data_byte(0x4E);
	    lcd_write_data_byte(0xC6);
	    lcd_write_data_byte(0x39);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x00);

	    lcd_write_reg(0XE1);
	    lcd_write_data_byte(0x1F);
	    lcd_write_data_byte(0x3F);
	    lcd_write_data_byte(0x3F);
	    lcd_write_data_byte(0x0F);
	    lcd_write_data_byte(0x1F);
	    lcd_write_data_byte(0x0F);
	    lcd_write_data_byte(0x46);
	    lcd_write_data_byte(0x49);
	    lcd_write_data_byte(0x31);
	    lcd_write_data_byte(0x05);
	    lcd_write_data_byte(0x09);
	    lcd_write_data_byte(0x03);
	    lcd_write_data_byte(0x1C);
	    lcd_write_data_byte(0x1A);
	    lcd_write_data_byte(0x00);

	    lcd_write_reg(0XF1);
	    lcd_write_data_byte(0x36);
	    lcd_write_data_byte(0x04);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x3C);
	    lcd_write_data_byte(0x0F);
	    lcd_write_data_byte(0x0F);
	    lcd_write_data_byte(0xA4);
	    lcd_write_data_byte(0x02);

	    lcd_write_reg(0XF2);
	    lcd_write_data_byte(0x18);
	    lcd_write_data_byte(0xA3);
	    lcd_write_data_byte(0x12);
	    lcd_write_data_byte(0x02);
	    lcd_write_data_byte(0x32);
	    lcd_write_data_byte(0x12);
	    lcd_write_data_byte(0xFF);
	    lcd_write_data_byte(0x32);
	    lcd_write_data_byte(0x00);

	    lcd_write_reg(0XF4);
	    lcd_write_data_byte(0x40);
	    lcd_write_data_byte(0x00);
	    lcd_write_data_byte(0x08);
	    lcd_write_data_byte(0x91);
	    lcd_write_data_byte(0x04);

	    lcd_write_reg(0XF8);
	    lcd_write_data_byte(0x21);
	    lcd_write_data_byte(0x04);

	    lcd_write_reg(0X3A);
	    lcd_write_data_byte(0x55);

	    lcd_write_reg(0xB6);
	    lcd_write_reg(0X00);
	    lcd_write_data_byte(0x08);

	    lcd_write_reg(0x36);
	    lcd_write_data_byte(0x62);

	    vTaskDelay(200);

	    lcd_write_reg(0x11);
	    vTaskDelay(120);

	    lcd_write_reg(0x29);

		xSemaphoreGive(lcd_mutex);
	}
}

void lcd_reset(void)
{
	gpio_set_level(RST_PIN, 1);
	vTaskDelay(50);
	gpio_set_level(RST_PIN, 0);
	vTaskDelay(50);
	gpio_set_level(RST_PIN, 1);
	vTaskDelay(50);
}

void lcd_set_pixel(uint16_t x, uint16_t y, uint16_t color)
{
	uint8_t buffer[2] = {color>>8, color};
	lcd_set_cursor(x, y, x, y);
	lcd_write_data(buffer, 2);
}

void lcd_set_window_color(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1,
		uint16_t color)
{

	uint8_t buffer[2] = {color>>8, color};

    if(xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE)
    {
        lcd_set_cursor(x0, y0, x1, y1);
        for(uint16_t i=x0; i<x1; i++)
        {
        	for(uint16_t j=y0; j<y1; j++)
        		lcd_write_data(buffer, 2);
        }

        xSemaphoreGive(lcd_mutex);
    }

}

void lcd_draw_image(const uint16_t *image, uint16_t x, uint16_t y, uint16_t width,
		uint16_t height)
{
	uint16_t page=0;

	lcd_set_cursor(x, y, x+width, y+height);
	uint8_t buffer[2];

	for(uint16_t i=0; i< height; i++)
	{
		for(uint16_t j= 0; j<width; j++)
		{
			buffer[0] = image[page+j]>>8;
			buffer[1] = image[page+j];
			lcd_write_data(buffer, 2);
		}
		page += width;
	}

}
