==> josarcas/STM32IOT/Core/Src/lcd_driver.c <==
#include "lcd_driver.h"
#include "widget_map.h"
#include "math.h"
#define RD_ACTIVE  			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_5, 0)
#define RD_IDLE    			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_5, 1)
#define WR_ACTIVE  			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_4, 0)
#define WR_IDLE    			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_4, 1)
#define CD_COMMAND			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_3, 0)
#define CD_DATA				HAL_GPIO_WritePin(GPIOC, GPIO_PIN_3, 1)
#define CS_ACTIVE  			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_2, 0)
#define CS_IDLE    			HAL_GPIO_WritePin(GPIOC, GPIO_PIN_2, 1)
#define WR_STROBE		    {WR_ACTIVE;WR_IDLE;}
#define TFTWIDTH   240
#define TFTHEIGHT  320
#define ILI9341_SOFTRESET          0x01
#define ILI9341_SLEEPIN            0x10
#define ILI9341_SLEEPOUT           0x11
#define ILI9341_NORMALDISP         0x13
#define ILI9341_INVERTOFF          0x20
#define ILI9341_INVERTON           0x21
#define ILI9341_GAMMASET           0x26
#define ILI9341_DISPLAYOFF         0x28
#define ILI9341_DISPLAYON          0x29
#define ILI9341_COLADDRSET         0x2A
#define ILI9341_PAGEADDRSET        0x2B
#define ILI9341_MEMORYWRITE        0x2C
#define ILI9341_PIXELFORMAT        0x3A
#define ILI9341_FRAMECONTROL       0xB1
#define ILI9341_DISPLAYFUNC        0xB6
#define ILI9341_ENTRYMODE          0xB7
#define ILI9341_POWERCONTROL1      0xC0
#define ILI9341_POWERCONTROL2      0xC1
#define ILI9341_VCOMCONTROL1       0xC5
#define ILI9341_VCOMCONTROL2       0xC7
#define ILI9341_MEMCONTROL         0x36

void lcd_init()
{
	lcd_reset();
	HAL_Delay(20);

	CS_ACTIVE;
	writeRegister8(ILI9341_SOFTRESET, 0);
	HAL_Delay(50);
	writeRegister8(ILI9341_DISPLAYOFF, 0);

	writeRegister8(ILI9341_POWERCONTROL1, 0x23);
	writeRegister8(ILI9341_POWERCONTROL2, 0x10);
	writeRegister16(ILI9341_VCOMCONTROL1, 0x2B2B);
	writeRegister8(ILI9341_VCOMCONTROL2, 0xC0);
	writeRegister8(ILI9341_MEMCONTROL, ILI9341_MADCTL_MY | ILI9341_MADCTL_BGR);
	writeRegister8(ILI9341_PIXELFORMAT, 0x55);
	writeRegister16(ILI9341_FRAMECONTROL, 0x001B);

	writeRegister8(ILI9341_ENTRYMODE, 0x07);


	writeRegister8(ILI9341_SLEEPOUT, 0);
	HAL_Delay(150);
	writeRegister8(ILI9341_DISPLAYON, 0);
	HAL_Delay(500);
	set_cursor(0, 0, TFTWIDTH-1, TFTHEIGHT-1);

    return;
}

void lcd_reset(void)
{
	CS_IDLE;
	WR_IDLE;
	RD_IDLE;

	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_1, 0);
	HAL_Delay(2);
	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_1, 1);

	CS_ACTIVE;
	CD_COMMAND;
	write8(0x00);
	for(uint8_t i=0; i<3; i++) WR_STROBE;
	CS_IDLE;
}

void lcd_set_pixel(uint16_t x, uint16_t y, uint16_t color)
{

	set_cursor(x, y, x, y);

	CS_ACTIVE;
	CD_COMMAND;
	write8(0x2C);
	CD_DATA;
	write8(color>>8);
	write8(color);
	CS_IDLE;

}

void lcd_set_window_color(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1,
		uint16_t color)
{
	uint8_t hi = color>>8;
	uint8_t lo = color;

	set_cursor(x0, y0, x1-1, y1-1);

	CS_ACTIVE;
	CD_COMMAND;
	write8(0x2C);
	CD_DATA;
	for(uint16_t i=x0; i<x1; i++)
	{
		for(uint16_t j=y0; j<y1; j++)
		{
			write8(hi);
			write8(lo);
		}
	}
	CS_IDLE;

}

void lcd_draw_image(const uint16_t *image, uint16_t x, uint16_t y, uint16_t width,
		uint16_t height)
{
	uint16_t page=0;

	set_cursor(x, y, x+width-1, y+height-1);

	CS_ACTIVE;
	CD_COMMAND;
	write8(0x2C);
	CD_DATA;
	for(uint16_t i=0; i< height; i++)
	{
		for(uint16_t j= 0; j<width; j++)
		{
			write8(image[page+j]>>8);
			write8(image[page+j]);
		}
		page += width;
	}
	CS_IDLE;

}
